side menu scroll overflow issue solved

--- a/apps/acb/src/app/app.component.scss
+++ b/apps/acb/src/app/app.component.scss
@@ -1,133 +1,189 @@
-/*
- * Remove template code below
- */
-:host {
-  display: block;
-  font-family: sans-serif;
-  min-width: 300px;
-  max-width: 600px;
-  margin: 50px auto;
-}
+.app {
+  .content {
+    display: flex;
+    margin: 82px auto 32px;
+    padding: 0 16px;
+    max-width: 960px;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.gutter-left {
-  margin-left: 9px;
-}
+  .card {
+    border-radius: 4px;
+    border: 1px solid #eee;
+    background-color: #fafafa;
+    height: 40px;
+    width: 200px;
+    margin: 0 8px 16px;
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+    line-height: 24px;
+  }
 
-.col-span-2 {
-  grid-column: span 2;
-}
+  .card-container .card:not(.highlight-card):hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  }
 
-.flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 99%;
+    height: 99%;
+    z-index: 999999;
+    color: #3988f0;
+  }
 
-header {
-  background-color: #143055;
-  color: white;
-  padding: 5px;
-  border-radius: 3px;
-}
+  .backdrop {
+    height: 100%;
+    min-width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    z-index: 999;
+  }
 
-main {
-  padding: 0 36px;
-}
+  .toolbar {
+    height: 80px;
+    background: #00a8ff;
+    background: linear-gradient(
+      90deg,
+      rgba(0, 168, 255, 1) 0%,
+      rgba(9, 9, 121, 1) 35%,
+      rgba(0, 212, 255, 1) 100%
+    );
+    display: flex;
+    align-items: center;
+    color: white;
+    padding-left: 15px;
+  }
 
-p {
-  text-align: center;
-}
+  :host {
+    display: flex;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-h1 {
-  text-align: center;
-  margin-left: 18px;
-  font-size: 24px;
-}
+  .app-layout {
+    // height: 100vh;
+  }
 
-h2 {
-  text-align: center;
-  font-size: 20px;
-  margin: 40px 0 10px 0;
-}
+  .menu-sidebar {
+    position: relative;
+    z-index: 10;
+    height: 100vh;
+    box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
+  }
 
-.resources {
-  text-align: center;
-  list-style: none;
-  padding: 0;
-  display: grid;
-  grid-gap: 9px;
-  grid-template-columns: 1fr 1fr;
-}
+  .header-trigger {
+    height: 64px;
+    padding: 20px 24px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s, padding 0s;
+  }
 
-.resource {
-  color: #0094ba;
-  height: 36px;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  padding: 3px 9px;
-  text-decoration: none;
-}
+  .menu-btn:hover {
+    color: #1890ff;
+  }
 
-.resource:hover {
-  background-color: rgba(68, 138, 255, 0.04);
-}
+  .sidebar-logo {
+    position: relative;
+    padding: 12px;
+    overflow: hidden;
+    transition: all 0.3s;
+    vertical-align: middle;
+    height: 200px;
+    background: url('../assets/imgs/bg.png');
+    background-size: cover;
+    background-position: center;
 
-pre {
-  padding: 9px;
-  border-radius: 4px;
-  background-color: black;
-  color: #eee;
-}
+    .welcome-bar {
+      background-color: rgba(0, 0, 0, 0.431);
+      margin-top: 15px;
 
-details {
-  border-radius: 4px;
-  color: #333;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  padding: 3px 9px;
-  margin-bottom: 9px;
-}
+      h2 {
+        color: #fff;
+      }
+    }
+  }
 
-summary {
-  cursor: pointer;
-  outline: none;
-  height: 36px;
-  line-height: 36px;
-}
+  nz-header {
+    padding: 0;
+  }
 
-.github-star-container {
-  margin-top: 12px;
-  line-height: 20px;
-}
+  .app-header {
+    position: relative;
+    height: 64px;
+    padding: 0;
+    background: #fff;
+    box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+    overflow: hidden;
+  }
 
-.github-star-container a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: #333;
-}
+  nz-content {
+    // margin: 24px;
+    overflow: initial;
+  }
 
-.github-star-badge {
-  color: #24292e;
-  display: flex;
-  align-items: center;
-  font-size: 12px;
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  border-radius: 3px;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  margin-left: 4px;
-  font-weight: 600;
-}
+  .inner-content {
+    background: #fff;
+  }
 
-.github-star-badge:hover {
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-  border-color: rgba(27, 31, 35, 0.35);
-  background-position: -0.5em;
-}
-.github-star-badge .material-icons {
-  height: 16px;
-  width: 16px;
-  margin-right: 4px;
+  .menu-item.desktop {
+    ul {
+      padding-top: 15px;
+    }
+
+    li {
+      margin-bottom: 35px;
+      min-height: 60px;
+    }
+    a {
+      font-size: 32px;
+      height: 90px;
+    }
+    i {
+      font-size: 35px;
+    }
+  }
+
+  .menu-item.mobile {
+    ul {
+      padding-top: 8px;
+    }
+
+    i {
+      font-size: 25px;
+    }
+
+    a {
+      font-size: 18px;
+    }
+  }
+
+  .screnLockBtn {
+    background: grey;
+    border-color: black;
+  }
+
+  .nz-sider{
+    max-height: 100%;
+  }
+
+  .backdrop2 {
+    background: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    z-index: 999;
+    top: 64px;
+    height: 100%;
+    width: 100%;
+  }
 }
